--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
         <div class="temperature-description">Please allow access to your location</div>
     </div>
+    <footer>
+        source code on <a href="https://github.com/Abdulrahman-hub/weather-app">GITHUB</a>
+    </footer>
 </body>
 
 </html>
